# ec-slimloader

./: Cargo.toml  README.md  build.rs  deny.toml  link-imxrt.x
.cargo/: config.toml
.github/workflows/: check.yml
src/: main.rs
src/imxrt/: fcb.rs  interrupts.rs  mod.rs
