[package]
name = "ec-slimloader"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = true      # better optimizations
opt-level = "z"

[features]
# Special board support
mimxrt685s-evk = ["imxrt-fcb-rt685evk", "mimxrt685s"]

# FCB support
imxrt-fcb-rt685evk = ["mimxrt685s"]
imxrt-fcb-1spi-a1-nor = ["imxrt-fcb-1spi-nor"]
imxrt-fcb-1spi-b1-nor = ["imxrt-fcb-1spi-nor"]
imxrt-fcb-1spi-nor = ["imxrt"]

# chip variants
mimxrt685s = ["imxrt"]
mimxrt633s = ["imxrt"]

# common imxrt features
imxrt = ["dep:mimxrt600-fcb"]

# optional debug logging 
defmt = ["dep:defmt", "dep:defmt-rtt"]

[dependencies]
ec-slimloader-descriptors = { git = "https://github.com/OpenDevicePartnership/ec-slimloader-descriptors", rev = "cee1877"  }

crc = "3.2.1"

# Optionally pull in defmt for trace debugging scenarios
defmt = { version = "0.3.6", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-probe = "*"

mimxrt600-fcb = { version = "0.2.0", optional = true }
